# HANERMA

./: .env.example  .gitignore  ALL_FEATURES_HYPERDETAILED.md  AURA_COMPLETE.md  AURA_OF_SUPERIORITY.md  BRAND_DOCUMENTATION.md  COMMUNITY_COMPLETE.md  COMMUNITY_FORCE_MULTIPLIER.md  CONTINGENCY_README.md  Dockerfile  FEATURES_REPORT.md  FINAL_REPORT.txt  FINAL_TEST_LOG.txt  FLUFF_ERADICATION_PLAN.md  HANERMA-AWESOME.md  HANERMA_PRD.md  HOW_TO_RUN.md  LICENSE  Makefile  PRODUCTION_READINESS.md  README.md  ZERO_RESISTANCE_COMPLETE.md  ZERO_RESISTANCE_README.md  all_features.txt  apex_all_in_one.py  apex_master_demo.py  aura_implementation.py  contingency_protocols.py  crayontest.py  cua_audit.jsonl  demo.py  demo_apex.py  docker-compose.yml  enterprise_readiness_report.json  generate_report.py  grafana_dashboard.json  hanerma_dev_showcase.py  hanerma_quick.py  hanerma_sandbox_test.py  install.ps1  (+32 more)
.agent/rules/: must.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  main.yml
deployment/docker/: Dockerfile  Dockerfile.test
deployment/k8s/: deployment.yaml
deployment/terraform/: main.tf  variables.tf
docs/: FINAL_CERTIFICATION_REPORT.md  SESSION_WORKLOG_2026-03-09.md  architecture.md  benchmarking.md  memory_hcms.md  mkdocs.yml
docs/architecture/: three_deep_thinking.md
docs/benchmarks/: performance.md
docs/builder_guide/: personas.md
examples/: 01_basic_autoprompt.py  01_zero_error_atomic.py  02_grok_multi_agent.py  02_multi_agent_swarm.py  03_infinite_context.py  apex_demo.py  apex_full_demo.py  apex_live_showcase.py
hanerma-core/: Cargo.toml  pyproject.toml  test_engine.py  test_state.py
hanerma-core/src/: dag.rs  lib.rs  memory.rs  state.rs
scripts/: run_benchmarks.py  setup_local_env.sh
src/hanerma/: __init__.py  apex.py  cli.py  main.py
src/hanerma/agents/: __init__.py  base.py  base_agent.py  cua_agent.py  grok_native.py  registry.py  runtimes.py  swarm_protocol.py  swarm_supervisor.py
src/hanerma/autoprompt/: __init__.py  constraint_injector.py  enhancer.py  templates.py
src/hanerma/core/: __init__.py  config.py  exceptions.py  types.py
src/hanerma/interface/: empathy.py  minimalist.py  voice.py
src/hanerma/memory/: __init__.py  core.py  hypertoken.py  manager.py  tiering.py
src/hanerma/models/: __init__.py  cloud_llm.py  constrained.py  local_detector.py  local_llm.py  router.py
src/hanerma/observability/: __init__.py  export_logger.py  human_in_loop.py  metrics.py  viz_server.py
src/hanerma/optimization/: ast_analyzer.py  ast_parallelizer.py  cost_manager.py  latency_shield.py
src/hanerma/orchestrator/: __init__.py  consensus.py  engine.py  graph_router.py  message_bus.py  nlp_compiler.py  recursive_bound.py  state_manager.py  telemetry.py
src/hanerma/perpetual/: engine.py
src/hanerma/reasoning/: __init__.py  deep1_atomic.py  deep2_nested.py  deep3_external.py  z3_solver.py
src/hanerma/reliability/: adversarial.py  constraint_compiler.py  fact_extractor.py  risk_engine.py  (+1 more)
tests/: conftest.py  debug_crayon.py  test_full_framework.py  test_model_agnosticism.py  test_sandbox_no_llm.py  verify_root.py  verify_super_sandbox.py
tests/benchmarks/: run_gaia.py
tests/unit/: conftest.py  test_atomic_guards.py  test_hcms.py  test_security_config.py  test_telemetry.py
(+50 files in other folders)
